@@ -1,5 +1,6 @@
 2013-04-19  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] Wizard to kickstart a new Sphinx project
 	* [TASK] Install official TYPO3 ReStructuredText Tools provided by the Documentation Team
 
 2013-04-18  Xavier Perseguers  <xavier@causal.ch>
